--- a/public/index.html
+++ b/public/index.html
@@ -51,16 +51,16 @@
               <div class="alert alert-warning d-none login-alert" role="alert" id="incorrect-password-warning">
                 Sorry, but your password is incorrect.
               </div>
-              <div class="alert alert-warning d-none login-alert" role="alert" id="invalid-email-warning">
-                A user with that email doesn&rsquo;t exist - please sign up.
+              <div class="alert alert-warning d-none login-alert" role="alert" id="invalid-username-warning">
+                A user with that username doesn&rsquo;t exist - please sign up.
               </div>
               <div class="alert alert-warning d-none login-alert" role="alert" id="login-unknown-error">
                 An unknown error occured. Please try again later.
               </div>
               <form id="login-form">
                 <div class="form-group">
-                  <label for="login-email" class="col-form-label">Email:</label>
-                  <input type="email" class="form-control" id="login-email" required />
+                  <label for="login-username" class="col-form-label">Username:</label>
+                  <input type="text" class="form-control" id="login-username" required />
                 </div>
                 <div class="form-group">
                   <label for="login-password" class="col-form-label">Password:</label>
@@ -90,16 +90,16 @@
               <div class="alert alert-info d-none login-alert" role="alert" id="signing-up-alert">
                 Signing you up&hellip;
               </div>
-              <div class="alert alert-warning d-none login-alert" role="alert" id="existing-email-warning">
-                Sorry, but an account for that email address already exists.
+              <div class="alert alert-warning d-none login-alert" role="alert" id="existing-username-warning">
+                Sorry, but an account for that username address already exists.
               </div>
               <div class="alert alert-warning d-none login-alert" role="alert" id="sign-up-unknown-error">
                 An unknown error occured. Please try again later.
               </div>
               <form id="sign-up-form">
                 <div class="form-group">
-                  <label for="login-email" class="col-form-label">Email:</label>
-                  <input type="email" class="form-control" id="sign-up-email" required />
+                  <label for="sign-up-username" class="col-form-label">Username:</label>
+                  <input type="text" class="form-control" id="sign-up-username" required />
                 </div>
                 <div class="form-group">
                   <label for="sign-up-password" class="col-form-label">Password:</label>
